--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jordan Accessibility Finder</title>
     <meta name="description" content="This app connects people with disabilities to accessible venues in Jordan, offering real-time location-based discovery and navigation assistance." />
-    <link rel="icon" type="image/svg+xml" href="/placeholder.svg" />
+    <link rel="icon" type="image/svg+xml" href="./access-venues/placeholder.svg" />
 
     <meta property="og:title" content="Jordan Accessibility Finder" />
     <meta property="og:description" content="This app connects people with disabilities to accessible venues in Jordan, offering real-time location-based discovery and navigation assistance." />
